--- a/Views/FichaCalificacions/Create.cshtml
+++ b/Views/FichaCalificacions/Create.cshtml
@@ -75,31 +75,19 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ImagenFicha" class="control-label"></label>
-<<<<<<< HEAD
-                                <input asp-for="ImagenFicha" class="form-control" data-val-required="Complete este campo." />
-=======
-                <input asp-for="ImagenFicha" class="form-control" name="imgFicha" id="imgFicha" type="file"/>
->>>>>>> bd8a41b24596518f50e966d6d1e46714c2b68efc
+                 <input asp-for="ImagenFicha" class="form-control" name="imgFicha" id="imgFicha" type="file" data-val-required="Complete este campo." />
                 <span asp-validation-for="ImagenFicha" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ImagenEstudiante" class="control-label"></label>
-<<<<<<< HEAD
-                                <input asp-for="ImagenEstudiante" class="form-control" data-val-required="Complete este campo." />
-=======
-                <input asp-for="ImagenEstudiante" class="form-control" name="imgEstudiante" id="imgEstudiante" type="file"/>
->>>>>>> bd8a41b24596518f50e966d6d1e46714c2b68efc
+                <input asp-for="ImagenEstudiante" class="form-control" name="imgEstudiante" id="imgEstudiante" type="file" data-val-required="Complete este campo." />
                 <span asp-validation-for="ImagenEstudiante" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="ImagenCarta" class="control-label"></label>
-<<<<<<< HEAD
-                                <input asp-for="ImagenCarta" class="form-control" data-val-required="Complete este campo." />
-=======
-                <input asp-for="ImagenCarta" class="form-control" name="imgCarta" id="imgCarta" type="file" />
->>>>>>> bd8a41b24596518f50e966d6d1e46714c2b68efc
+                <input asp-for="ImagenCarta" class="form-control" name="imgCarta" id="imgCarta" type="file" data-val-required="Complete este campo." />
                 <span asp-validation-for="ImagenCarta" class="text-danger"></span>
             </div></div></div>
 
