--- a/Views/Gastoes/Create.cshtml
+++ b/Views/Gastoes/Create.cshtml
@@ -42,26 +42,26 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="TipoPago" class="control-label"></label>
-                <input asp-for="TipoPago" class="form-control" />
+                                <input asp-for="TipoPago" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="TipoPago" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaEntrega" class="control-label"></label>
-                <input asp-for="FechaEntrega" class="form-control" />
+                                <input asp-for="FechaEntrega" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="FechaEntrega" class="text-danger"></span>
             </div></div></div>
                     <div class="row">
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="NumeroDocumento" class="control-label"></label>
-                <input asp-for="NumeroDocumento" class="form-control" />
+                                <input asp-for="NumeroDocumento" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="NumeroDocumento" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Monto" class="control-label"></label>
-                <input asp-for="Monto" class="form-control" />
+                                <input asp-for="Monto" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="Monto" class="text-danger"></span>
                             </div>
                         </div>
@@ -70,7 +70,7 @@
                         <div class="col-md-12">
             <div class="form-group">
                 <label asp-for="Descripcion" class="control-label"></label>
-                <textarea asp-for="Descripcion" class="form-control campo-descripcion"></textarea>
+                                <textarea asp-for="Descripcion" class="form-control campo-descripcion" data-val-required="Complete este campo."></textarea>
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div></div></div>
 
