--- a/Views/Tutoriums/Create.cshtml
+++ b/Views/Tutoriums/Create.cshtml
@@ -55,26 +55,26 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaCreacion" class="control-label"></label>
-                <input asp-for="FechaCreacion" class="form-control" />
+                                <input asp-for="FechaCreacion" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="FechaCreacion" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="HoraInicio" class="control-label"></label>
-                <input asp-for="HoraInicio" class="form-control" />
+                <input asp-for="HoraInicio" class="form-control" data-val-required="Complete este campo."  />
                 <span asp-validation-for="HoraInicio" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="HoraFinal" class="control-label"></label>
-                <input asp-for="HoraFinal" class="form-control" />
+                                <input asp-for="HoraFinal" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="HoraFinal" class="text-danger"></span>
             </div></div></div>
                     <div class="row">
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Tema" class="control-label"></label>
-                <input asp-for="Tema" class="form-control" />
+                                <input asp-for="Tema" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="Tema" class="text-danger"></span>
             </div></div></div>
 
