--- a/Views/ImagenAdicionals/Create.cshtml
+++ b/Views/ImagenAdicionals/Create.cshtml
@@ -18,12 +18,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="ImgAdicional" class="control-label"></label>
-                <input asp-for="ImgAdicional" class="form-control" />
+                <input asp-for="ImgAdicional" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="ImgAdicional" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Descripcion" class="control-label"></label>
-                <input asp-for="Descripcion" class="form-control" />
+                <input asp-for="Descripcion" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
             <div class="form-group">
