--- a/Views/NivelAcademicoes/Create.cshtml
+++ b/Views/NivelAcademicoes/Create.cshtml
@@ -36,7 +36,7 @@
                         <div class="col-md-6 mx-auto">
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
+                                <input asp-for="Nombre" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div></div></div>
 
