--- a/Views/Patrocinadors/Create.cshtml
+++ b/Views/Patrocinadors/Create.cshtml
@@ -50,39 +50,39 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
+                                <input asp-for="Nombre" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div></div></div>
                     <div class="row">
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
+                                <input asp-for="Apellido" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" />
+                                <input asp-for="Estado" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FotoPerfil" class="control-label"></label>
-                <input asp-for="FotoPerfil" class="form-control" />
+                                <input asp-for="FotoPerfil" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="FotoPerfil" class="text-danger"></span>
             </div></div></div>
                     <div class="row">
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaNacimiento" class="control-label"></label>
-                <input asp-for="FechaNacimiento" class="form-control" />
+                                <input asp-for="FechaNacimiento" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaCreacion" class="control-label"></label>
-                <input asp-for="FechaCreacion" class="form-control" />
+                                <input asp-for="FechaCreacion" class="form-control" data-val-required="Complete este campo." />
                 <span asp-validation-for="FechaCreacion" class="text-danger"></span>
             </div></div></div>
 
