iconos de acciones

--- a/Views/Areas/Index.cshtml
+++ b/Views/Areas/Index.cshtml
@@ -47,9 +47,9 @@
                 @Html.DisplayFor(modelItem => item.Descripcion)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CodigoArea">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CodigoArea">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CodigoArea">Delete</a>
+                        <a asp-action="Edit" asp-route-id="@item.CodigoArea"><i class="fs-4 bi bi-pencil-fill text-success"></i></a>
+                        <a asp-action="Details" asp-route-id="@item.CodigoArea"><i class="fs-4 bi bi-eye-fill text-success"></i></a>
+                        <a asp-action="Delete" asp-route-id="@item.CodigoArea"><i class="fs-4 bi bi-trash3-fill text-success"></i></a>
             </td>
         </tr>
 }
