--- a/Views/OrdenCompras/Index.cshtml
+++ b/Views/OrdenCompras/Index.cshtml
@@ -58,9 +58,9 @@
                 @Html.DisplayFor(modelItem => item.CodigoProveedorNavigation.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CodigoOrdenCompra">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CodigoOrdenCompra">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CodigoOrdenCompra">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.CodigoOrdenCompra"><i class="fs-4 bi bi-pencil-fill text-success"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.CodigoOrdenCompra"><i class="fs-4 bi bi-eye-fill text-success"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.CodigoOrdenCompra"><i class="fs-4 bi bi-trash3-fill text-success"></i></a>
             </td>
         </tr>
 }
