--- a/Views/TutorTuroriums/Index.cshtml
+++ b/Views/TutorTuroriums/Index.cshtml
@@ -39,9 +39,9 @@
                 @Html.DisplayFor(modelItem => item.CodigoTutoriaNavigation.CodigoTutoria)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CodigoTutorTutoria">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CodigoTutorTutoria">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CodigoTutorTutoria">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.CodigoTutorTutoria"><i class="fs-4 bi bi-pencil-fill text-success"></i></a>
+                <a asp-action="Details" asp-route-id="@item.CodigoTutorTutoria"><i class="fs-4 bi bi-eye-fill text-success"></i></a>
+                <a asp-action="Delete" asp-route-id="@item.CodigoTutorTutoria"><i class="fs-4 bi bi-trash3-fill text-success"></i></a>
             </td>
         </tr>
 }
