--- a/Views/Tutoriums/Create.cshtml
+++ b/Views/Tutoriums/Create.cshtml
@@ -61,17 +61,13 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="HoraInicio" class="control-label"></label>
-                <input asp-for="HoraInicio" class="form-control" data-val-required="Complete este campo."  />
+                <input asp-for="HoraInicio" class="form-control" type="time data-val-required="Complete este campo." />
                 <span asp-validation-for="HoraInicio" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="HoraFinal" class="control-label"></label>
-<<<<<<< HEAD
-                                <input asp-for="HoraFinal" class="form-control" data-val-required="Complete este campo." />
-=======
                 <input asp-for="HoraFinal" class="form-control" type="time"/>
->>>>>>> 490ec485b2c13b2e02513743e4918d6bb984367a
                 <span asp-validation-for="HoraFinal" class="text-danger"></span>
             </div></div></div>
                     <div class="row">
