--- a/Views/Carreras/Index.cshtml
+++ b/Views/Carreras/Index.cshtml
@@ -45,9 +45,9 @@
                 @Html.DisplayFor(modelItem => item.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CodigoCarrera">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CodigoCarrera">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CodigoCarrera">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.CodigoCarrera"><i class="fs-4 bi bi-pencil-fill text-success"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.CodigoCarrera"><i class="fs-4 bi bi-eye-fill text-success"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.CodigoCarrera"><i class="fs-4 bi bi-trash3-fill text-success"></i></a>
             </td>
         </tr>
 }
