--- a/Views/Cursoes/Index.cshtml
+++ b/Views/Cursoes/Index.cshtml
@@ -42,9 +42,9 @@
                 @Html.DisplayFor(modelItem => item.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CodigoCurso">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CodigoCurso">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CodigoCurso">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.CodigoCurso"><i class="fs-4 bi bi-pencil-fill text-success"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.CodigoCurso"><i class="fs-4 bi bi-eye-fill text-success"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.CodigoCurso"><i class="fs-4 bi bi-trash3-fill text-success"></i></a>
             </td>
         </tr>
 }
