--- a/Views/HistorialEstudiantes/Index.cshtml
+++ b/Views/HistorialEstudiantes/Index.cshtml
@@ -64,9 +64,9 @@
                 @Html.DisplayFor(modelItem => item.CodigoNivelAcademicoNavigation.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CodigoHistorialEstudiante">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CodigoHistorialEstudiante">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CodigoHistorialEstudiante">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.CodigoHistorialEstudiante"><i class="fs-4 bi bi-pencil-fill text-success"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.CodigoHistorialEstudiante"><i class="fs-4 bi bi-eye-fill text-success"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.CodigoHistorialEstudiante"><i class="fs-4 bi bi-trash3-fill text-success"></i></a>
             </td>
         </tr>
 }
