--- a/Views/NivelAcademicoes/Index.cshtml
+++ b/Views/NivelAcademicoes/Index.cshtml
@@ -44,9 +44,9 @@
                 @Html.DisplayFor(modelItem => item.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CodigoNivelAcademico">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CodigoNivelAcademico">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CodigoNivelAcademico">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.CodigoNivelAcademico"><i class="fs-4 bi bi-pencil-fill text-success"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.CodigoNivelAcademico"><i class="fs-4 bi bi-eye-fill text-success"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.CodigoNivelAcademico"><i class="fs-4 bi bi-trash3-fill text-success"></i></a>
             </td>
         </tr>
 }
