--- a/Views/Pais/Index.cshtml
+++ b/Views/Pais/Index.cshtml
@@ -40,9 +40,9 @@
                 @Html.DisplayFor(modelItem => item.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CodigoPais">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CodigoPais">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CodigoPais">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.CodigoPais"><i class="fs-4 bi bi-pencil-fill text-success"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.CodigoPais"><i class="fs-4 bi bi-eye-fill text-success"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.CodigoPais"><i class="fs-4 bi bi-trash3-fill text-success"></i></a>
             </td>
         </tr>
 }
