--- a/Views/Profesions/Index.cshtml
+++ b/Views/Profesions/Index.cshtml
@@ -43,9 +43,9 @@
                 @Html.DisplayFor(modelItem => item.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CodigoProfesion">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CodigoProfesion">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CodigoProfesion">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.CodigoProfesion"><i class="fs-4 bi bi-pencil-fill text-success"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.CodigoProfesion"><i class="fs-4 bi bi-eye-fill text-success"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.CodigoProfesion"><i class="fs-4 bi bi-trash3-fill text-success"></i></a>
             </td>
         </tr>
 }
