--- a/Views/Proveedors/Index.cshtml
+++ b/Views/Proveedors/Index.cshtml
@@ -51,9 +51,9 @@
                 @Html.DisplayFor(modelItem => item.Descripcion)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CodigoProveedor">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CodigoProveedor">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CodigoProveedor">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.CodigoProveedor"><i class="fs-4 bi bi-pencil-fill text-success"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.CodigoProveedor"><i class="fs-4 bi bi-eye-fill text-success"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.CodigoProveedor"><i class="fs-4 bi bi-trash3-fill text-success"></i></a>
             </td>
         </tr>
 }
