--- a/Views/Tutors/Index.cshtml
+++ b/Views/Tutors/Index.cshtml
@@ -71,9 +71,9 @@
                 @Html.DisplayFor(modelItem => item.CodigoProfesionNavigation.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CodigoTutor">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CodigoTutor">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CodigoTutor">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.CodigoTutor"><i class="fs-4 bi bi-pencil-fill text-success"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.CodigoTutor"><i class="fs-4 bi bi-eye-fill text-success"></i></a>
+                    <a asp-action="Delete" asp-route-id="@item.CodigoTutor"><i class="fs-4 bi bi-trash3-fill text-success"></i></a>
             </td>
         </tr>
 }
