--- a/Views/Registro/Principal.cshtml
+++ b/Views/Registro/Principal.cshtml
@@ -32,7 +32,7 @@
             <a asp-controller="FichaCalificacions" asp-action="Create">
                 <div class=" card-body primeraTarjeta3">
                 </div>
-                <div class="card-header textHeader text-center">Calificaiones</div>
+                <div class="card-header textHeader text-center">Calificaciones</div>
             </a>
         </div>
 
