--- a/Views/Compra/Index.cshtml
+++ b/Views/Compra/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="row ">
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
-            <a asp-controller="HistorialEstudiantes" asp-action="Create">
+            <a asp-controller="OrdenCompras" asp-action="Create">
                 <div class=" card-body primeraTarjetac1">
                 </div>
                 <div class="card-header textHeader text-center">Registro</div>
@@ -15,7 +15,7 @@
     </div>
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
-            <a asp-controller="Estudiantes" asp-action="Create">
+            <a asp-controller="OrdenCompras" asp-action="Index">
                 <div class=" card-body primeraTarjetac2">
                 </div>
                 <div class="card-header textHeader text-center">Informe </div>
