--- a/Views/EstudiantePatrocinadors/Create.cshtml
+++ b/Views/EstudiantePatrocinadors/Create.cshtml
@@ -46,7 +46,7 @@
 
                     <div class="d-flex justify-content-end">
                 <input type="submit" value="Crear" class="btn btn-primary me-2 w-25" />
-                        <a class="btn btn-outline-info me-2 w-25" asp-action="Index">Cancelar</a>
+                        <a class="btn btn-outline-info me-2 w-25" asp-controller="Asignacion" asp-action="Index">Cancelar</a>
             </div>
         </form>
     </div>
