--- a/Views/Informe/Index.cshtml
+++ b/Views/Informe/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="row ">
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
-            <a asp-controller="HistorialEstudiantes" asp-action="Create">
+            <a asp-controller="Estudiantes" asp-action="Index">
                 <div class=" card-body primeraTarjetai1">
                 </div>
                 <div class="card-header textHeader text-center"> Nomina General</div>
@@ -15,7 +15,7 @@
     </div>
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
-            <a asp-controller="Estudiantes" asp-action="Create">
+            <a asp-controller="FichaCalificacions" asp-action="Index">
                 <div class=" card-body primeraTarjetai2">
                 </div>
                 <div class="card-header textHeader text-center">Ficha de Calificaciones </div>
@@ -23,26 +23,10 @@
         </div>
 
     </div>
+
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
-            <a asp-controller="Estudiantes" asp-action="Create">
-                <div class=" card-body primeraTarjetai3">
-                </div>
-                <div class="card-header textHeader text-center">Ficha Informativa </div>
-            </a>
-        </div>
-
-    </div>
-
-</div>
-
-
-
-
-<div class="row ">
-    <div class="col-sm-3">
-        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
-            <a asp-controller="HistorialEstudiantes" asp-action="Create">
+            <a asp-controller="Tutoriums" asp-action="Index">
                 <div class=" card-body primeraTarjetai4">
                 </div>
                 <div class="card-header textHeader text-center">Lista de Tutorias</div>
@@ -50,17 +34,6 @@
         </div>
 
     </div>
-    <div class="col-sm-3">
-        <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
-            <a asp-controller="Estudiantes" asp-action="Create">
-                <div class=" card-body primeraTarjetai5">
-                </div>
-                <div class="card-header textHeader text-center">Formatos de Informe </div>
-            </a>
-        </div>
-
-    </div>
 
 </div>
-
 
