--- a/Views/Patrocinadors/Create.cshtml
+++ b/Views/Patrocinadors/Create.cshtml
@@ -81,13 +81,14 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaNacimiento" class="control-label"></label>
-                                <input asp-for="FechaNacimiento" class="form-control" data-val-required="Complete este campo." />
+                                <input asp-for="FechaNacimiento" class="form-control" type="date"
+                                       data-val-required="Complete este campo." />
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaCreacion" class="control-label"></label>
-                                <input asp-for="FechaCreacion" class="form-control" data-val-required="Complete este campo." />
+                                <input asp-for="FechaCreacion" class="form-control" data-val-required="Complete este campo." type="date" />
                 <span asp-validation-for="FechaCreacion" class="text-danger"></span>
             </div></div></div>
 
