--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,6 +16,10 @@
 
     <title>Document</title>
 </head>
+
+        <div class="text-center">
+            <h3 class="display-3">Bienvenido(a) @ViewData["nombreUsuario"]</h3>
+        </div>
 <body>
 
     <div class="col py-3">
