--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
         <nav class="navbar navbar-expand-xl  box-shadow">
             <div class="container-fluid ">
                 <a class="navbar-brand text-white font-weight-bold" asp-area="" asp-controller="Home" asp-action="Index">QUCHOOCH</a>
+                <a class="navbar-brand text-white font-weight-bold" asp-area="" asp-controller="Home" asp-action="CerrarSesion">Cerrar Sesion</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
