--- a/Views/Proveedors/Delete.cshtml
+++ b/Views/Proveedors/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estás seguro que quieres eliminar esto?</h3>
+
 <div>
-    <h4>Proveedor</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -27,7 +27,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="CodigoProveedor" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger me-2 w-25" /> |
+        <a asp-action="Index" class="btn btn-primary me-2 w-25">Regresar a la lista </a>
     </form>
 </div>
