--- a/Views/Asignacion/Index.cshtml
+++ b/Views/Asignacion/Index.cshtml
@@ -15,7 +15,7 @@
     </div>
     <div class="col-sm-3">
         <div class="card text-white mb-3 tarjetaPrincipal " style="max-width: 20rem;">
-            <a asp-controller="Patrocinadors" asp-action="Create">
+            <a asp-controller="EstudiantePatrocinadors" asp-action="Create">
                 <div class=" card-body primeraTarjetaa2">
                 </div>
                 <div class="card-header textHeader text-center">Estudiantes-Patrocinado </div>
@@ -23,7 +23,8 @@
         </div>
 
     </div>
-    
+
 </div>
+    
 
 
