--- a/Views/Tutoriums/Create.cshtml
+++ b/Views/Tutoriums/Create.cshtml
@@ -61,13 +61,13 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="HoraInicio" class="control-label"></label>
-                <input asp-for="HoraInicio" class="form-control" type="time data-val-required="Complete este campo." />
+                                <input asp-for="HoraInicio" class="form-control" data-val-required="Complete este campo." type="time />
                 <span asp-validation-for="HoraInicio" class="text-danger"></span>
             </div></div>
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="HoraFinal" class="control-label"></label>
-                <input asp-for="HoraFinal" class="form-control" type="time"/>
+                                <input asp-for="HoraFinal" class="form-control" data-val-required="Complete este campo."  type="time" />
                 <span asp-validation-for="HoraFinal" class="text-danger"></span>
             </div></div></div>
                     <div class="row">
@@ -89,8 +89,43 @@
 </div>
 
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+
 </body>
 </html>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('form').submit(function (event) {
+                // Evita que el formulario se envíe normalmente
+                event.preventDefault();
+
+                // Envía el formulario a través de AJAX
+                $.ajax({
+                    url: '@Url.Action("Create", "Tutoriums")',
+                    type: 'POST',
+                    data: $(this).serialize(),
+                    success: function (result) {
+                        // Muestra una alerta de notificación usando SweetAlert
+                        swal("Registro guardado correctamente", "", "success");
+
+                        // Puedes redirigir al usuario a otra página después de mostrar la alerta
+                        //window.location.href = '/Tutoriums/Create';
+
+                        setTimeout(function () {
+                            window.location.href = '/Tutoriums/Create';
+                        }, 2000); // 2000 milisegundos = 2 segundos
+                    },
+                    error: function (result) {
+                        // Muestra una alerta de error si el registro no se guardó correctamente
+                        swal("Error al guardar el registro", "", "error");
+                    }
+                });
+            });
+        });
+    </script>
+
+}
