--- a/Views/HistorialEstudiantes/Create.cshtml
+++ b/Views/HistorialEstudiantes/Create.cshtml
@@ -66,7 +66,7 @@
                         <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="FechaCreacion" class="control-label"></label>
-                                <input asp-for="FechaCreacion" class="form-control" data-val-required="Complete este campo." />
+                                <input asp-for="FechaCreacion" class="form-control" data-val-required="Complete este campo." type="date" />
                 <span asp-validation-for="FechaCreacion" class="text-danger"></span>
             </div></div></div>
 
@@ -79,9 +79,43 @@
     </main>
 </div>
 
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
 </body>
 </html>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('form').submit(function (event) {
+                // Evita que el formulario se envíe normalmente
+                event.preventDefault();
+
+                // Envía el formulario a través de AJAX
+                $.ajax({
+                    url: '@Url.Action("Create", "HistorialEstudiantes")',
+                    type: 'POST',
+                    data: $(this).serialize(),
+                    success: function (result) {
+                        // Muestra una alerta de notificación usando SweetAlert
+                        swal("Registro guardado correctamente", "", "success");
+
+                        // Puedes redirigir al usuario a otra página después de mostrar la alerta
+                        //window.location.href = '/Tutoriums/Create';
+
+                        setTimeout(function () {
+                            window.location.href = '/HistorialEstudiantes/Create';
+                        }, 2000); // 2000 milisegundos = 2 segundos
+                    },
+                    error: function (result) {
+                        // Muestra una alerta de error si el registro no se guardó correctamente
+                        swal("Error al guardar el registro", "", "error");
+                    }
+                });
+            });
+        });
+    </script>
+
+}
